--- a/styles.css
+++ b/styles.css
@@ -125,3 +125,92 @@ footer {
     margin-top: 5px;
     max-width: 80%;
 }
+
+#menu-button {
+    display: none; 
+    background: none;
+    border: none;
+    cursor: pointer;
+    padding: 10px;
+    position: relative;
+    z-index: 1000;
+}
+
+#menu-button .bar {
+    width: 30px;
+    height: 3px;
+    background: #212121;
+    margin: 6px 0;
+    transition: 0.4s;
+}
+
+@media screen and (max-width: 600px) {
+    header {
+        flex-direction: column;
+    }
+
+    .logo {
+        justify-content: center;
+        margin-bottom: 2rem;
+    }
+
+    .logo img {
+        width: 50%;
+    }
+
+    .logo h1 {
+        font-size: 0;
+    }
+
+    #menu-button {
+        display: block;
+    }
+
+    #myNav-list {
+        display: none;
+    }
+
+    #menu-button.active + #myNav-list {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+    }
+
+    footer {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+    }
+
+    .subscribe-container {
+        margin-left: 0;
+    }
+
+    .form-container {
+        flex-direction: column;
+        gap: 15px;
+    }
+
+    .email-input {
+        text-align: center;
+    }
+
+    .logo-small {
+        width: 30%;
+        margin: 0;
+        margin-top: 30px;
+    }
+
+    .page-links {
+        margin: 0;
+        align-items: center;
+        margin-top: 30px
+    }
+
+    .copyright {
+        margin-left: 0;
+        margin-top: 10px;
+    }
+}
