--- a/styles.css
+++ b/styles.css
@@ -144,6 +144,23 @@ footer {
     transition: 0.4s;
 }
 
+@media screen and (max-width: 1400px) {
+    footer {
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+    }
+
+    .subscribe-container {
+        width: 40%;
+    }
+
+    .logo-small {
+        margin: 0;
+        margin-left: 2rem;
+    }
+}
+
 @media screen and (max-width: 900px) {
     header {
         flex-direction: column;
@@ -200,8 +217,8 @@ footer {
 
     .logo-small {
         width: 30%;
-        margin: 0;
-        margin-top: 30px;
+        margin: 0 !important;
+        margin-top: 30px !important;
     }
 
     .page-links {
