--- a/styles.css
+++ b/styles.css
@@ -111,8 +111,12 @@ footer {
     font-family: 'Poppins', sans-serif;
 }
 
+.page-links a:hover {
+    color: #b390e6;
+}
+
 .logo-small {
-    width: 15%; /* Adjust size as needed */
+    width: 15%; 
     height: 15%;
     margin-left: 300px;
     margin-top: 50px;
